[package]
name = "accessfix"
version = "0.1.0"
authors = ["Alex Weech <aweech340@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
osmpbfreader = {path = "../osmpbfreader-rs"}
xml-rs = "0.8.3"
time = "0.2.16"
